# youterm

./: .gitignore  LICENSE  MANIFEST.in  README.md  install-uv.sh  install.sh  pyproject.toml
stream_cli/: __init__.py  auto_discovery.py  cli.py  discovery.py  smart_queue.py  tui.py  ytdlp_wrapper.py
stream_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
youterm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
