[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youterm"
version = "0.1.0"
description = "Terminal audio streaming CLI tool with Spotify-like discovery."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "yt-dlp>=2023.9.24",
    "readchar>=4.0.3"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
youterm = "stream_cli.cli:main"
youterm-discover = "stream_cli.discovery:main"
youterm-queue = "stream_cli.smart_queue:main"
